--- a/Spring/IoC/pom.xml
+++ b/Spring/IoC/pom.xml
@@ -2,16 +2,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>edu.javacourse</groupId>
-    <artifactId>spring</artifactId>
+    <groupId>edu.javacourse.spring</groupId>
+    <artifactId>ioc</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>Spring</name>
+    <name>Spring IoC</name>
 
     <modules>
-        <module>Integration</module>
-        <module>IoC</module>
+        <module>IoC-01-Simple-Bean</module>
     </modules>
 
 </project>
