Add Spring IoC Inheritance example

--- a/Spring/IoC/pom.xml
+++ b/Spring/IoC/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>IoC-01-Simple-Bean</module>
+        <module>IoC-02-Inheritance</module>
     </modules>
 
 </project>
