Add Spring IoC different bean instantiation methods

--- a/Spring/IoC/pom.xml
+++ b/Spring/IoC/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>IoC-01-Simple-Bean</module>
         <module>IoC-02-Inheritance</module>
+        <module>IoC-03-Instantiation</module>
     </modules>
 
 </project>
