Add Spring IoC Scope example

--- a/Spring/IoC/pom.xml
+++ b/Spring/IoC/pom.xml
@@ -13,6 +13,7 @@
         <module>IoC-01-Simple-Bean</module>
         <module>IoC-02-Inheritance</module>
         <module>IoC-03-Instantiation</module>
+        <module>IoC-04-Scope</module>
     </modules>
 
 </project>
