--- a/Spring/IoC/pom.xml
+++ b/Spring/IoC/pom.xml
@@ -14,6 +14,7 @@
         <module>IoC-02-Inheritance</module>
         <module>IoC-03-Instantiation</module>
         <module>IoC-04-Scope</module>
+        <module>IoC-05-Lazy-Init</module>
     </modules>
 
 </project>
